Dev endpoints modified